--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <!-- partial -->
-  <script  src="./script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
